# Agentic_AI_Sandbox

./: .gitignore  QUICK_START.md  RAG_EDITOR_README.md  README.md  environment.yml  pyproject.toml  requirements.txt  test_gui.py
Speech_to_LLM/: MULTI_MODEL_RAG_USAGE.md  Multi_Model_RAG_Voice.py  Speech_to_English_Txt_Spacebar.py  Speech_to_English_Txt_to_Spanish_Txt.py  Speech_to_English_Txt_to_Spanish_Txt_Spacebar.py  setup_env.sh
src/sandbox_editor/: __init__.py  main.py
src/sandbox_editor/core/: __init__.py  rag_engine.py
src/sandbox_editor/gui/: __init__.py  chat_window.py
src/sandbox_editor/vscode/: __init__.py  diff_handler.py
