[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sandbox-editor"
version = "0.1.0"
description = "GUI chat interface for RAG-powered code editing with VS Code integration"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Nathan Carter"}
]
keywords = ["rag", "llm", "code-editor", "gui", "chat"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Editors :: Integrated Development Environments (IDE)",
]

dependencies = [
    "chromadb>=0.4.0",
    "langchain-chroma>=0.1.0",
    "langchain-huggingface>=0.0.1",
    "langchain-openai>=0.1.0",
    "langchain-ollama>=0.1.0",
    "langchain-text-splitters>=0.2.0",
    "langchain-classic>=0.1.0",
    "langchain-core>=0.2.0",
    "vosk>=0.3.44",
    "sounddevice>=0.4.6",
    "pynput>=1.7.6",
    "transformers>=4.30.0",
    "torch>=2.0.0",
    "python-dotenv>=1.0.0",
    "numpy>=1.24.0",
    "sentence-transformers>=2.2.0",
    "PyQt6>=6.6.0",
    "PyQt6-QScintilla>=2.14.0",
]

[project.scripts]
sandbox-editor = "sandbox_editor.main:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=23.0",
    "flake8>=6.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
sandbox_editor = ["*.json", "*.yaml", "*.yml"]

